--- a/office-hours.html
+++ b/office-hours.html
@@ -48,23 +48,28 @@
               },
               eventDidMount: function(info) {
                 if (info.event.start && info.el) {
-                  let title = "";
                   const year = info.event.start.getFullYear();
                   const month = info.event.start.getMonth()+1;
                   const day = info.event.start.getDate();
-
-                  if(info.event.title === "US, EU") {
-                    title = "US, EU<br>" + luxon.DateTime.fromObject(
-                      {year, month, day, hour: 17, minute: 30 },
-                      { zone: 'Europe/Budapest' }
-                    ).setZone(luxon.DateTime.local().zoneName).toFormat('HH:mm');
-                  } else {
-                    title = "APAC, EU<br>" + luxon.DateTime.fromObject(
-                      { year, month, day, hour: 8, minute: 0 },
-                      { zone: 'Europe/Budapest' }
-                    ).setZone(luxon.DateTime.local().zoneName).toFormat('HH:mm');
-                  }
+                  let hour = 0;
+                  let minute = 0;
                   
+                  if(info.event.title === "US, EU") {
+                    hour = 17;
+                    minute = 30;
+                  } else {
+                    hour = 8;
+                    minute = 0;
+                  }
+                  const baseDate = luxon.DateTime.fromObject(
+                    { year, month, day, hour, minute },
+                    { zone: 'Europe/Budapest' }
+                  );
+                  const localDate = baseDate.setZone(luxon.DateTime.local().zoneName);
+                  const dayDifference = localDate.ordinal - baseDate.ordinal;
+                  const title = info.event.title + "<br>" + localDate.toFormat('HH:mm') +
+                    (dayDifference === 0 ? "" : ` (${dayDifference > 0 ? "+" : ""}${dayDifference}d)`);
+
                   info.el.innerHTML=`<div class="fc-event-title fc-sticky">${title}</div>`;
                 }
             },
