--- a/office-hours.html
+++ b/office-hours.html
@@ -82,7 +82,7 @@
           let timeZoneMessage = `Times are displayed in "${
             localTimeZone}" timezone in 24h format.<br>If (+1d) or (-1d) is displayed, it means the event is on the next or previous day in your timezone.`;
           document.getElementById('info-message').innerHTML = `${timeZoneMessage}<br><br>
-              Sessions are 1.5 hours long.`;
+              Sessions are 1 hour long.`;
       });
   </script>
   
