--- a/cohort-14.html
+++ b/cohort-14.html
@@ -175,7 +175,7 @@
         let timeZoneMessage = `Times are displayed in "${
           localTimeZone}" timezone in 24h format.<br>If (+1d) or (-1d) is displayed, it means the event is on the next or previous day in your timezone.`;
         document.getElementById('info-message').innerHTML = `${timeZoneMessage}<br><br>
-            Orientation is 30 minutes.<br>Main sessions are 1.5 hours long and recorded.`;
+            Orientation is 30 minutes.<br>Main sessions are 1.5 hours long and recorded. Office hours are 1 hour long.`;
     });
 </script>
 
